# music-tuning

./: .env  README.md  pyproject.toml
data/gongkebyar/: aggregated_partials.json  partials_per_note.json
data/gongkebyar/spectrumfiles/: spectrum-pemade-penumbang-dang-2.txt  spectrum-pemade-penumbang-deng-2.txt  spectrum-pemade-penumbang-dung-2.txt
data/test/: aggregated_partials.json  octaves_ranges.json  partials_per_note.json
data/test/soundfiles/: info.xlsx  limits.json
data/test/spectrumfiles/: spectrum-pemade-penumbang-ding-2.txt
tests/tuning/: test_frequency_analysis.py
tuning/: frequency-analysis.py  frequency_analysis.py  main.py  pipeline.py  temp.py
tuning/analysis/: aggregation.py  classes.py  constants.py  dissonance.py  dissonance_profile.py  frequency_analysis.py  partials.py  sound.py  soundfiles.py  spectrum.py  spectrum_analysis.py  summaries.py  temp.py  utils.py  visualize.py
tuning/audacity/: audacity_interface.py  keystroke_test.py  pipe_test.py  spectrum_gen.py  spectrum_generation.py
tuning/common/: classes.py  constants.py  utils.py
tuning/data/: spectrum.txt
tuning/data/gongkebyar/: aggregated_harmonics.json  aggregated_harmonics_o.json  aggregated_harmonics_old.json  aggregated_partials.json  harmonics_per_note.json  harmonics_per_note_o.json  harmonics_per_note_old.json  octaves_ranges.json  (+3 more)
tuning/instruments/: enhance_soundfiles.py  instrumentinfo.py  process_soundfiles.py  utils.py
tuning/soundfiles/: enhance_soundfiles.py  instrumentinfo.py  process_soundfiles.py
tuning/visualization/: plotter.py  utils.py
(+1 files in other folders)
